--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Game Collection</title>
+    <title>Nanis & Firo Video Game Collection</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 2em; background: #f8f8f8; }
         h1 { color: #333; }
