--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nanis & Firo Video Game Collection</title>
+    <title>W+J Video Game Collection</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 2em; background: #f8f8f8; }
         h1 { color: #333; }
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <h1>Video Game Collection</h1>
+    <h1>Woonza & Jocelo Video Game Collection</h1>
     <input type="text" id="filterInput" placeholder="Filter games by title, developer, or console..." style="width: 100%; max-width: 400px; padding: 8px; margin-bottom: 1.5em; font-size: 1em;">
     <div id="games"></div>
     <script>
