--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
             ],
             "N64": [
                 { "title": "Turok", "release_year": 2017, "developer": "Akklaim", "price": 15 }
+            ],
+            "Sega Genesis": [
+                { "title": "Animaniacs", "release_year": 1994, "developer": "Konami", "price": 15 }
+            ],
+            "Nintendo Switch": [
+                { "title": "Dragon Quest I, II, III", "release_year": 2017, "developer": "Square Enix", "price": 35 }
             ]
         };
 
