--- a/index.html
+++ b/index.html
@@ -21,38 +21,44 @@
         // Embedded videogames data
         const data = {
             "NES": [
-                { "title": "Barbie", "release_year": 1985, "developer": "Nintendo", "price": 10 },
-                { "title": "California Games", "release_year": 1986, "developer": "Milton Bradley", "price": 10 },
-                { "title": "Mickey Mousecapade", "release_year": 1985, "developer": "Capcom", "price": 19 },
-                { "title": "Blades of Steel", "release_year": 1984, "developer": "Konami", "price": 6 },
-                { "title": "Golgo 13: Top Secret Episode", "release_year": 1985, "developer": "Vic Tokai", "price": 9 },
-                { "title": "Teenage Mutant Ninja Turtles", "release_year": 1985, "developer": "Ultra", "price": 10 },
-                { "title": "Bionic Commando", "release_year": 1985, "developer": "Capcom", "price": 11 },
-                { "title": "Mega Man 2", "release_year": 1985, "developer": "Capcom", "price": 20 },
-                { "title": "Dragon Warrior", "release_year": 1985, "developer": "Nintendo", "price": 12 },
-                { "title": "Hudson's Adventure Island", "release_year": 1985, "developer": "Hudson Soft", "price": 11 },
-                { "title": "Tiny Toon Adventures", "release_year": 1985, "developer": "Konami", "price": 10 }
+                { "title": "Barbie", "release_year": 1985, "developer": "Nintendo", "price": 10, "format": "Physical" },
+                { "title": "California Games", "release_year": 1986, "developer": "Milton Bradley", "price": 10, "format": "Physical" },
+                { "title": "Mickey Mousecapade", "release_year": 1985, "developer": "Capcom", "price": 19, "format": "Physical" },
+                { "title": "Blades of Steel", "release_year": 1984, "developer": "Konami", "price": 6, "format": "Physical" },
+                { "title": "Golgo 13: Top Secret Episode", "release_year": 1985, "developer": "Vic Tokai", "price": 9, "format": "Physical" },
+                { "title": "Teenage Mutant Ninja Turtles", "release_year": 1985, "developer": "Ultra", "price": 10, "format": "Physical" },
+                { "title": "Bionic Commando", "release_year": 1985, "developer": "Capcom", "price": 11, "format": "Physical" },
+                { "title": "Mega Man 2", "release_year": 1985, "developer": "Capcom", "price": 20, "format": "Physical" },
+                { "title": "Dragon Warrior", "release_year": 1985, "developer": "Nintendo", "price": 12, "format": "Physical" },
+                { "title": "Hudson's Adventure Island", "release_year": 1985, "developer": "Hudson Soft", "price": 11, "format": "Physical" },
+                { "title": "Tiny Toon Adventures", "release_year": 1985, "developer": "Konami", "price": 10, "format": "Physical" }
             ],
             "SNES": [
-                { "title": "Super Mario World", "release_year": 1994, "developer": "Nintendo", "price": 12 },
-                { "title": "Donkey Kong Country", "release_year": 1995, "developer": "Nintendo", "price": 19 },
-                { "title": "Street Fighter II", "release_year": 1995, "developer": "Capcom", "price": 16 },
-                { "title": "Batman Forever", "release_year": 1995, "developer": "Akklaim Entertainment", "price": 9 }
+                { "title": "Super Mario World", "release_year": 1994, "developer": "Nintendo", "price": 12, "format": "Physical" },
+                { "title": "Donkey Kong Country", "release_year": 1995, "developer": "Nintendo", "price": 19, "format": "Physical" },
+                { "title": "Street Fighter II", "release_year": 1995, "developer": "Capcom", "price": 16, "format": "Physical" },
+                { "title": "Batman Forever", "release_year": 1995, "developer": "Akklaim Entertainment", "price": 9, "format": "Physical" }
             ],
             "GameBoy Color": [
-                { "title": "The Legend of Zelda: Link's Awakening DX", "release_year": 2006, "developer": "Nintendo", "price": 0 }
+                { "title": "The Legend of Zelda: Link's Awakening DX", "release_year": 2006, "developer": "Nintendo", "price": 0, "format": "Physical" }
             ],
             "3DS": [
-                { "title": "Animal Crossing: Happy Home Designer", "release_year": 2017, "developer": "Nintendo", "price": 5 }
+                { "title": "Animal Crossing: Happy Home Designer", "release_year": 2017, "developer": "Nintendo", "price": 5, "format": "Physical" }
             ],
             "N64": [
-                { "title": "Turok", "release_year": 2017, "developer": "Akklaim", "price": 15 }
+                { "title": "Turok", "release_year": 2017, "developer": "Akklaim", "price": 15, "format": "Physical" }
             ],
             "Sega Genesis": [
-                { "title": "Animaniacs", "release_year": 1994, "developer": "Konami", "price": 15 }
+                { "title": "Animaniacs", "release_year": 1994, "developer": "Konami", "price": 15, "format": "Physical" }
             ],
             "Nintendo Switch": [
-                { "title": "Dragon Quest I, II, III", "release_year": 2017, "developer": "Square Enix", "price": 35 }
+                { "title": "Dragon Quest I, II, III", "release_year": 2017, "developer": "Square Enix", "price": 35, "format": "Physical" },
+                { "title": "Super Mario Party Jamboree", "release_year": 2024, "developer": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Mario Party Superstars", "release_year": 2021, "developer": "Nintendo", "price": 60, "format": "Physical" }
+            ],
+            "Nintendo Switch 2": [
+                { "title": "Donkey Kong Bananza", "release_year": 2025, "developer": "Nintendo", "price": 69.99, "format": "Physical" },
+                { "title": "Mario Kart World", "release_year": 2025, "developer": "Nintendo", "price": 0, "format": "Digital" }
             ]
         };
 
