adding more sections

--- a/books.html
+++ b/books.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Amiibos Collection</title>
+    <title>My Books Collection</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
@@ -39,32 +39,17 @@
             font-size: 48px;
             color: #bbb;
         }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            display: inline;
-            margin-right: 10px;
-        }
-        a {
-            text-decoration: none;
-            color: #007bff;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="placeholder-img">🎮</div>
-        <h1>My Amiibos Collection</h1>
-        <p>This page is a placeholder for my Amiibos collection.<br>
-        Check back soon for updates!</p>
         <ul>
             <li><a href="index.html">Back to Main</a></li>
         </ul>
+        <div class="placeholder-img">🎮</div>
+        <h1>My Books Collection</h1>
+        <p>This page is a placeholder for my Books collection.<br>
+        Check back soon for updates!</p>
     </div>
 </body>
 </html>
