--- a/mangas.html
+++ b/mangas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Collectibles</title>
+    <title>My Mangas Collection</title>
     <style>
         body { font-family: Arial, sans-serif; background: #f8f8f8; margin: 0; padding: 0; }
         .container { max-width: 500px; margin: 5em auto; background: #fff; border-radius: 10px; box-shadow: 0 2px 8px #0001; padding: 2em; text-align: center; }
@@ -12,17 +12,14 @@
         li { margin: 1.2em 0; }
         a { display: inline-block; font-size: 1.2em; color: #1976d2; text-decoration: none; padding: 0.5em 1.5em; border-radius: 5px; background: #e3f2fd; transition: background 0.2s, color 0.2s; }
         a:hover { background: #1976d2; color: #fff; }
+        
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Collectibles</h1>
+        <h1>My Mangas Collection</h1>
         <ul>
-            <li><a href="videogames.html">Video Games</a></li>
-            <li><a href="amiibos.html">Amiibos</a></li>
-            <li><a href="books.html">Books</a></li>
-            <li><a href="mangas.html">Mangas</a></li>
-            <li><a href="comics.html">Comics</a></li>
+            <li><a href="index.html">Back to Main</a></li>
         </ul>
     </div>
 </body>
