--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Collectibles</h1>
+        <h1>Welcome to 💅 Woonza and 🧑‍💻 Jocelo Collectibles</h1>
         <ul>
             <li><a href="videogames.html">Video Games</a></li>
             <li><a href="amiibos.html">Amiibos</a></li>
