--- a/videogames.html
+++ b/videogames.html
@@ -53,17 +53,15 @@
                 { "title": "Street Fighter II", "release_year": 1995, "developer": "Capcom", "price": 16, "format": "Physical" },
                 { "title": "Batman Forever", "release_year": 1995, "developer": "Akklaim Entertainment", "price": 9, "format": "Physical" }
             ],
-            "GameBoy Color": [
-                { "title": "The Legend of Zelda: Link's Awakening DX", "release_year": 2006, "developer": "Nintendo", "price": 0, "format": "Physical" }
-            ],
-            "3DS": [
-                { "title": "Animal Crossing: Happy Home Designer", "release_year": 2017, "developer": "Nintendo", "price": 5, "format": "Physical" }
-            ],
             "N64": [
                 { "title": "Turok", "release_year": 2017, "developer": "Akklaim", "price": 15, "format": "Physical" }
             ],
-            "Sega Genesis": [
-                { "title": "Animaniacs", "release_year": 1994, "developer": "Konami", "price": 15, "format": "Physical" }
+            "Wii": [
+                { "title": "Call of Duty: Modern Warfare 3", "release_year": 2011, "developer": "Activision", "price": 10, "format": "Physical" },
+                { "title": "Just Dance: Disney", "release_year": 2019, "developer": "Ubisoft", "price": 15, "format": "Physical" },
+                { "title": "Disney Tangled", "release_year": 2019, "developer": "Ubisoft", "price": 15, "format": "Physical" },
+                { "title": "Disney Pixar Toy Story", "release_year": 2011, "developer": "Disney", "price": 15, "format": "Physical" },
+                { "title": "Wii fit plus", "release_year": 2018, "developer": "Nintendo", "price": 15, "format": "Physical" },
             ],
             "Nintendo Switch": [
                 { "title": "Dragon Quest I, II, III", "release_year": 2017, "developer": "Square Enix", "price": 35, "format": "Physical" },
@@ -73,7 +71,16 @@
             "Nintendo Switch 2": [
                 { "title": "Donkey Kong Bananza", "release_year": 2025, "developer": "Nintendo", "price": 69.99, "format": "Physical" },
                 { "title": "Mario Kart World", "release_year": 2025, "developer": "Nintendo", "price": 0, "format": "Digital" }
-            ]
+            ],
+            "GameBoy Color": [
+                { "title": "The Legend of Zelda: Link's Awakening DX", "release_year": 2006, "developer": "Nintendo", "price": 0, "format": "Physical" }
+            ],
+            "3DS": [
+                { "title": "Animal Crossing: Happy Home Designer", "release_year": 2017, "developer": "Nintendo", "price": 5, "format": "Physical" }
+            ],
+            "Sega Genesis": [
+                { "title": "Animaniacs", "release_year": 1994, "developer": "Konami", "price": 15, "format": "Physical" }
+            ],
         };
 
         function renderGames(filter = "") {
