--- a/videogames.html
+++ b/videogames.html
@@ -78,6 +78,10 @@
             "3DS": [
                 { "title": "Animal Crossing: Happy Home Designer", "release_year": 2017, "developer": "Nintendo", "price": 5, "format": "Physical" }
             ],
+            "Atari": [
+                { "title": "Jungle Hunt", "release_year": 1982, "developer": "Atari", "price": 5, "format": "Physical" },
+                { "title": "Pac-man", "release_year": 2017, "developer": "Nintendo", "price": 5, "format": "Physical" }
+            ],
             "Sega Genesis": [
                 { "title": "Animaniacs", "release_year": 1994, "developer": "Konami", "price": 15, "format": "Physical" }
             ],
