--- a/videogames.html
+++ b/videogames.html
@@ -62,6 +62,12 @@
                 { "title": "Disney Tangled", "release_year": 2019, "developer": "Ubisoft", "price": 15, "format": "Physical" },
                 { "title": "Disney Pixar Toy Story", "release_year": 2011, "developer": "Disney", "price": 15, "format": "Physical" },
                 { "title": "Wii fit plus", "release_year": 2018, "developer": "Nintendo", "price": 15, "format": "Physical" },
+                { "title": "Dragon Quest Swords: The masked Queen and the Tower of Mirrors", "release_year": 2007, "developer": "Square Enix", "price": 16, "format": "Physical" },
+                { "title": "Samba de Amigo", "release_year": 2008, "developer": "Sega", "price": 12, "format": "Physical" },
+                { "title": "Epic Mickey", "release_year": 2006, "developer": "Disney Interactive Studios", "price": 6, "format": "Physical" },
+                { "title": "Epic Mickey 2 The power of two", "release_year": 2006, "developer": "Disney Interactive Studios", "price": 7, "format": "Physical" },
+                { "title": "Final Fantasy The Cristal Bearers", "release_year": 2007, "developer": "Square Enix", "price": 18, "format": "Physical" },
+                { "title": "Tomb Raider Underworld", "release_year": 2006, "developer": "Eidos", "price": 10, "format": "Physical" },
             ],
             "Nintendo Switch": [
                 { "title": "Dragon Quest I, II, III", "release_year": 2017, "developer": "Square Enix", "price": 35, "format": "Physical" },
