Add new games and publishers for Nintendo Switch

--- a/videogames.html
+++ b/videogames.html
@@ -70,9 +70,30 @@
                 { "title": "Tomb Raider Underworld", "release_year": 2006, "developer": "Eidos", "price": 10, "format": "Physical" },
             ],
             "Nintendo Switch": [
-                { "title": "Dragon Quest I, II, III", "release_year": 2017, "developer": "Square Enix", "price": 35, "format": "Physical" },
-                { "title": "Super Mario Party Jamboree", "release_year": 2024, "developer": "Nintendo", "price": 60, "format": "Physical" },
-                { "title": "Mario Party Superstars", "release_year": 2021, "developer": "Nintendo", "price": 60, "format": "Physical" }
+                { "title": "Dragon Quest I, II, III", "release_year": 2017, "developer": "Square Enix", "publisher": "Nintendo", "price": 35, "format": "Physical" },
+                { "title": "Super Mario Party Jamboree", "release_year": 2024, "developer": "Nintendo", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Mario Party Superstars", "release_year": 2021, "developer": "Nintendo", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Pokemon Legends: Arceus", "release_year": 2022, "developer": "Game Freak", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Price of Persia: The lost crown", "release_year": 2024, "developer": "Ubisoft", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Samba de Amigo: Party Central", "release_year": 2023, "developer": "Sega", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Shin Megami Tensei III: Nocturne", "release_year": 2020, "developer": "Atlus", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Super Bomberman R", "release_year": 2017, "developer": "Konami", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Princess Peach: Showtime!", "release_year": 2024, "developer": "Good Feel", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Super Mario 3D All Stars", "release_year": 2020, "developer": "Nintendo", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Super Mario party", "release_year": 2018, "developer": "ND Cube", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Super Mario RPG", "release_year": 2023, "developer": "ArtePiazza", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Super Smash Bros Ultimate", "release_year": 2018, "developer": "Bandai Namco", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "The Legend of Zelda: Echoes of Wisdom", "release_year": 2024, "developer": "Grezzo", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "The Legend of Zelda: Link's Awakening", "release_year": 2019, "developer": "Grezzo", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "The Legend of Zelda: Skyward Sword HD", "release_year": 2021, "developer": "Tanalus Media", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Xenoblade Chronicles 3", "release_year": 2022, "developer": "Monolith Soft", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Xenoblade Chronicles", "release_year": 20, "developer": "", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Xenoblade Chronicles", "release_year": 20, "developer": "", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "WarioWare: Get It Together!", "release_year": 2021, "developer": "Intelligent Systems", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "The Wonderful 101: Remastered", "release_year": 2018, "developer": "Platinum Games", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "The Legend of Zelda: Tears of the Kingdom", "release_year": 2023, "developer": "Nintendo", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Nintendo World Championships: NES Edition", "release_year": 2024, "developer": "indieszero", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Just Dance 2019", "release_year": 2018, "developer": "Ubisoft", "publisher": "Ubisoft", "price": 60, "format": "Physical" },
             ],
             "Nintendo Switch 2": [
                 { "title": "Donkey Kong Bananza", "release_year": 2025, "developer": "Nintendo", "price": 69.99, "format": "Physical" },
